# python_c_test

./: CMakeLists.txt  multiply.py
src/: config.h  main.cpp  main.cpp~
